--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,22 +17,18 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ ubuntu-24.04 ]
         java: [ 8, 17 ]
       fail-fast: false
       max-parallel: 16
     name: Test JDK ${{ matrix.java }}, ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0
         with:
           distribution: 'temurin'
           java-version: ${{ matrix.java }}
-      - name: Build with Maven jdk8
-        if: ${{ matrix.java == '8' }}
+      - name: Build with Maven
         run: ./mvnw -Pgen-javadoc clean package -B
-      - name: Build with Maven jdk17
-        if: ${{ matrix.java == '17' }}
-        run: ./mvnw -Penable-for-jdk17+ clean package -B
